# Multi-channel-U-net

./: .gitignore  HARDWARE_SPECS.md  QUICK_START.md  README.md  compile_for_npu.sh  demo_live_multichannel.py  export_onnx.py  model.py  requirements.txt  train_unet.py
cpp_demo/: CMakeLists.txt  Makefile  NPU_FLOW_GUIDE.md  README.md  USAGE.md  build.sh  multichannel_demo.cpp  npu_flow_demo  npu_flow_demo.cpp  npu_flow_output.txt  standalone_demo.cpp
